Documentation model building

--- a/notebooks/2_Model_Building.ipynb
+++ b/notebooks/2_Model_Building.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Building\n",
+    "\n",
+    "In this notebook the model building task is executed. The project description can be found in a previous notebook [1_EDA_and_Data_Cleaning.ipynb](1_EDA_and_Data_Cleaning.ipynb). Note that in this first notebook data loading, data cleaning, and feature engineering are performed already.\n",
+    "\n",
+    "* Feature engineering is done in previous notebook [1_EDA_and_Data_Cleaning.ipynb](1_EDA_and_Data_Cleaning.ipynb).\n",
+    "* Multiple models are used like linear regression, ridge regression, lasso regression, elastic net, decision tree, random forest, gradient boosting, SVR and KNN.\n",
+    "* Hyper parameter tuning is done for algorithms that performed well like decision tree, random forest, gradient boosting, SVR (linear) and KNN.\n",
+    "* Elastic net was used that was not covered in class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -287,6 +301,54 @@
     "plt.ylabel('R²')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results and Analysis\n",
+    "\n",
+    "## Comparison: Linear Regression vs. Tuned Models\n",
+    "\n",
+    "The bar charts above (Root Mean Squared Error (RMSE), Mean Absolute Error (MAE) and R-Squared (R2)) illustrates comparison of different regression models applied to the Ames Housing Dataset.\n",
+    "\n",
+    "### Key Observations\n",
+    "\n",
+    "1. **Linear Regression**:\n",
+    "    - The Linear Regression model achieved an R² score of approximately 0.85. This indicates a good fit, but there is room for improvement with more sophisticated models.\n",
+    "\n",
+    "2. **Tuned Decision Tree**:\n",
+    "    - The Decision Tree model, after tuning, achieved a slightly lower R² score compared to Linear Regression. Decision Trees can be sensitive to overfitting, and despite tuning, it may not capture the complexity of the data as well as other models.\n",
+    "\n",
+    "3. **Tuned Random Forest**:\n",
+    "    - The Random Forest model performed better than the Decision Tree, with an R² score close to 0.87. The ensemble nature of Random Forest helps in reducing overfitting and capturing more complex patterns in the data.\n",
+    "\n",
+    "4. **Tuned Gradient Boosting**:\n",
+    "    - The Gradient Boosting model showed the highest R² score, approximately 0.88, indicating that it was the best performer among the tested models. Gradient Boosting builds trees sequentially, each trying to correct the errors of the previous one, which can lead to higher predictive accuracy.\n",
+    "\n",
+    "5. **Tuned SVR (Linear)**:\n",
+    "    - The Support Vector Regression model with a linear kernel achieved an R² score close to 0.86. SVR can handle high-dimensional feature spaces well, but its performance here was slightly below that of Gradient Boosting and Random Forest.\n",
+    "\n",
+    "6. **Tuned KNN**:\n",
+    "    - The K-Nearest Neighbors model, after tuning, had the lowest R² score among the tuned models, around 0.82. KNN's performance can be affected by the choice of 'k' and the distance metric, and it may struggle with high-dimensional data or datasets with many features.\n",
+    "\n",
+    "### Analysis\n",
+    "\n",
+    "* From the results, it is evident that ensemble methods such as Random Forest and Gradient Boosting generally outperform simpler models like Linear Regression and Decision Tree. Gradient Boosting, in particular, demonstrated the best performance, indicating its strength in handling the complexity and variability within the Ames Housing Dataset.\n",
+    "* Linear models like Linear Regression and SVR (Linear) also performed well, showing that for this dataset, even simpler models can achieve relatively high accuracy. However, the slight improvement seen with more complex models justifies their use, especially for capturing intricate patterns and interactions within the data.\n",
+    "* In conclusion, for the Ames Housing Dataset, Gradient Boosting appears to be the most effective model, followed closely by Random Forest. These models should be preferred for tasks requiring high predictive accuracy on similar datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussion and Conclusion\n",
+    "\n",
+    "* The takeaways of this project is that data exploration data analysis and data cleaning are crucial for a good result. It is valuable to compare different models against each other. It helps to find well performing models. Those well performing models can then be further improved with e.g. hyper-parameter-tuning.\n",
+    "* At first I had included the sales price as a feature and as the prediction value. Therefore even linear regression performed almost perfect. It was easy to detect with the error measures and R2 value and also easy to fix.\n",
+    "* If some more time would be spent to improve the hyper parameter tuning, most likely even better results are possible."
    ]
   }
  ],
